# docs/swagger.json
@@ -2049,6 +2049,9 @@
                 },
                 "updated_at": {
                     "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
                 }
             }
         },
@@ -2063,10 +2066,19 @@
         },
         "model.ExpenseCenterReceive": {
             "type": "object",
+            "required": [
+                "user_id"
+            ],
             "properties": {
+                "centroExpense_id": {
+                    "type": "string"
+                },
                 "nome_centro": {
                     "type": "string",
                     "example": "Administrativo"
+                },
+                "user_id": {
+                    "type": "string"
                 }
             }
         },
